<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="app_name">Torque Geometric</string>

	<string name="torquepaper_settings">Settings</string>
	<string name="torquepaper_settings_title">Select pattern</string>
	<string name="torquepaper_settings_summary">Choose which Islamic pattern to display</string>
	<string name="torquepaper_size_title">Size</string>
	<string name="torquepaper_size_summary">Size of polygons</string>
	<string name="torquepaper_rotatecolours_title">Cycle Colours</string>
	<string name="torquepaper_rotate_colours">Cycle Colours</string>
	
<!-- Color Picker -->
<string name="dialog_color_picker">Color Picker</string>
<string name="press_color_to_apply">Press on Color to apply</string>
<!-- Preferences -->
<string name="pref_category">Colors</string>
<string name="primary_colour_title">Primary Color</string>
<string name="primary_colour_summary">Primary Color</string>
<string name="secondary_colour_title">Secondary Color</string>
<string name="secondary_colour_summary">Secondary Color</string>
<string name="tertiary_colour_title">Tertiary Color</string>
<string name="tertiary_colour_summary">Tertiary Color</string>
</resources>
