<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/torquepaper_settings"
	android:key="torquepaper_settings">

	<ListPreference
		android:key="torquepaper_pattern"
		android:title="@string/torquepaper_settings_title"
		android:summary="@string/torquepaper_settings_summary"
		android:entries="@array/torquepaper_pattern_names"
		android:entryValues="@array/torquepaper_pattern_names"
		android:defaultValue="Dodecagonal"/>
	<ListPreference android:key="torquepaper_size" 
	    android:summary="@string/torquepaper_size_summary"
	     android:title="@string/torquepaper_size_title" 
	     android:entryValues="@array/torquepaper_sizes"
	     android:defaultValue="Medium" 
	     android:entries="@array/torquepaper_sizes"/>
	<CheckBoxPreference android:key="torquepaper_rotatecolours"
		android:summary="@string/torquepaper_rotate_colours"
		android:title="@string/torquepaper_rotatecolours_title"
		android:summaryOn="Cycle Colours"
		android:summaryOff="Don't Cycle Colours"/>
   <uk.co.torquesoftware.preferences.SeekBarPreference android:key="transparency"
        android:title="Transparency"
        android:summary="How transparent the pattern is"
        android:dialogMessage="Transparency Level"
        android:defaultValue="40"
        android:text=" percent"
        android:max="100"
        />	
	<PreferenceCategory android:title="@string/pref_category">
		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:key="primary_colour"
			android:title="@string/primary_colour_title" 
			android:summary="@string/primary_colour_summary"
			android:defaultValue="@integer/COLOR_BLUE" 
		/>
		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:key="secondary_colour"
			android:persistent="true"
			android:title="@string/secondary_colour_title" 
			android:summary="@string/secondary_colour_summary"
			android:defaultValue="@integer/COLOR_BLUE_2" 
		/>
		<net.margaritov.preference.colorpicker.ColorPickerPreference 
			android:key="tertiary_colour"
			android:title="@string/tertiary_colour_title" 
			android:summary="@string/tertiary_colour_summary"
			android:defaultValue="@integer/COLOR_BLUE_3"
			alphaSlider="false" 
		/>
	</PreferenceCategory>        
	
</PreferenceScreen>
